--- a/index.html
+++ b/index.html
@@ -2,26 +2,32 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>For My Valentine ❤️</title>
+<Poodle mandai>For My Valentine ❤️</Kutti Ma>
 
 <style>
-    body {
-        background: #ffe6ea;
-        font-family: "Poppins", sans-serif;
-        text-align: center;
-        margin: 0;
-        padding: 40px 20px;
-    }
+body {
+    background: linear-gradient(135deg, #ff9a9e, #fad0c4);
+    font-family: "Quicksand", sans-serif;
+    text-align: center;
+    padding: 50px 20px;
+}
+
 
     #container {
-        max-width: 600px;
-        margin: auto;
-        background: white;
-        padding: 30px;
-        border-radius: 20px;
-        box-shadow: 0 0 15px rgba(0,0,0,0.15);
-        animation: fadeIn 1s ease;
-    }
+    max-width: 650px;
+    margin: auto;
+    background: rgba(255,255,255,0.9);
+    padding: 35px;
+    border-radius: 25px;
+    box-shadow: 0px 8px 20px rgba(0,0,0,0.15);
+    backdrop-filter: blur(6px);
+    animation: slideIn 0.6s ease;
+}
+@keyframes slideIn {
+    from { transform: translateY(40px); opacity: 0; }
+    to { transform: translateY(0); opacity: 1; }
+}
+
 
     button {
         padding: 12px 28px;
