--- a/index.html
+++ b/index.html
@@ -2,96 +2,165 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<Poodle mandai>For My Valentine ❤️</Kutti Ma>
+<title>My Valentine ❤️</title>
+
+<!-- Romantic Cursive Fonts -->
+<link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Playfair+Display:ital,wght@1,400;1,700&display=swap" rel="stylesheet">
+
+<!-- Autoplay Music -->
+<audio id="bgMusic" src="New_West_-_Those_Eyes_CeeNaija.com_.mp3" autoplay loop></audio>
 
 <style>
+/* 🌸 Pastel Heaven Background */
 body {
-    background: linear-gradient(135deg, #ff9a9e, #fad0c4);
-    font-family: "Quicksand", sans-serif;
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden;
+    background: linear-gradient(135deg, #ffe3ef, #ffdff8, #f4e3ff);
+    font-family: "Playfair Display", serif;
     text-align: center;
-    padding: 50px 20px;
+    color: #7a4a4a;
 }
 
-
-    #container {
-    max-width: 650px;
-    margin: auto;
+/* ✨ Floating Sparkles */
+.sparkle {
+    position: absolute;
+    width: 6px;
+    height: 6px;
     background: rgba(255,255,255,0.9);
-    padding: 35px;
+    border-radius: 50%;
+    box-shadow: 0 0 8px white;
+    animation: sparkleFloat 6s linear infinite;
+}
+@keyframes sparkleFloat {
+    from { transform: translateY(0); opacity: 1; }
+    to { transform: translateY(-350px); opacity: 0; }
+}
+
+/* 💐 Petal Falling Animation */
+.petal {
+    position: fixed;
+    top: -20px;
+    width: 18px;
+    height: 18px;
+    background-color: rgba(255,182,193,0.8);
+    border-radius: 50% 70% 50% 70%;
+    animation: fall 7s linear infinite;
+}
+@keyframes fall {
+    0% { transform: translateY(0) rotate(0deg); }
+    100% { transform: translateY(120vh) rotate(360deg); }
+}
+
+/* 🕊️ Main Romantic Container */
+#container {
+    margin: 70px auto;
+    max-width: 650px;
+    background: rgba(255,255,255,0.65);
+    padding: 40px;
     border-radius: 25px;
-    box-shadow: 0px 8px 20px rgba(0,0,0,0.15);
-    backdrop-filter: blur(6px);
-    animation: slideIn 0.6s ease;
+    backdrop-filter: blur(7px);
+    box-shadow: 0 8px 30px rgba(0,0,0,0.15);
+    animation: fadeIn 1.5s ease;
+    border: 2px solid rgba(255,183,197,0.6);
 }
-@keyframes slideIn {
+
+@keyframes fadeIn {
+    from { opacity: 0; transform: translateY(15px); }
+    to { opacity: 1; transform: translateY(0); }
+}
+
+/* ✒️ Romantic Cursive Titles */
+h1, h2 {
+    font-family: "Great Vibes", cursive;
+    font-size: 52px;
+    color: #d46b86;
+    margin-bottom: 10px;
+}
+
+/* 📝 Cute Paragraph Text */
+p {
+    font-size: 20px;
+    font-style: italic;
+    color: #8c5b5b;
+}
+
+/* 💗 Heart-Shaped Buttons */
+button {
+    background: #ff9bb3;
+    color: white;
+    border: none;
+    padding: 14px 32px;
+    font-size: 24px;
+    border-radius: 40px 40px 40px 40px;
+    cursor: pointer;
+    font-family: "Great Vibes", cursive;
+    transition: 0.3s;
+    box-shadow: 0 5px 15px rgba(255,140,160,0.4);
+}
+button:hover {
+    transform: scale(1.12);
+    background: #ff7a9c;
+    box-shadow: 0 8px 20px rgba(255,120,150,0.5);
+}
+
+/* 😈 The NO button (runs away) */
+#noBtn {
+    position: absolute;
+    background: #b9838d;
+}
+
+/* 🌟 Floating Photo Reveal (disabled until user adds photos) */
+.float-photo {
+    width: 180px;
+    border-radius: 20px;
+    margin: 20px;
+    animation: floatUp 4s ease forwards;
+    opacity: 0;
+}
+@keyframes floatUp {
     from { transform: translateY(40px); opacity: 0; }
-    to { transform: translateY(0); opacity: 1; }
+    to { transform: translateY(-20px); opacity: 1; }
 }
-
-
-    button {
-        padding: 12px 28px;
-        font-size: 18px;
-        border: none;
-        border-radius: 10px;
-        cursor: pointer;
-        background: #ff4d6d;
-        color: white;
-        margin-top: 20px;
-        transition: 0.2s;
-    }
-
-    button:hover {
-        transform: scale(1.05);
-    }
-
-    input {
-        padding: 12px;
-        font-size: 17px;
-        width: 80%;
-        border: 2px solid #ffb3c6;
-        border-radius: 10px;
-        margin-top: 15px;
-    }
-
-    #noBtn {
-        background: #555;
-        position: absolute;
-        font-size: 18px;
-    }
-
-    .heart {
-        position: fixed;
-        animation: floatUp 4s linear;
-        bottom: -40px;
-        font-size: 25px;
-        pointer-events: none;
-    }
-
-    @keyframes floatUp {
-        0% {opacity: 1;}
-        100% {opacity: 0; transform: translateY(-200px);}
-    }
-
-    @keyframes fadeIn {
-        from {opacity: 0;}
-        to {opacity: 1;}
-    }
 </style>
 </head>
 
 <body>
 
+<!-- ✨ SPARKLE GENERATOR -->
+<script>
+for (let i = 0; i < 40; i++) {
+    let s = document.createElement("div");
+    s.classList.add("sparkle");
+    s.style.left = Math.random() * window.innerWidth + "px";
+    s.style.top = Math.random() * window.innerHeight + "px";
+    s.style.animationDelay = Math.random() * 6 + "s";
+    document.body.appendChild(s);
+}
+</script>
+
+<!-- 💐 PETAL GENERATOR -->
+<script>
+for (let i = 0; i < 20; i++) {
+    let p = document.createElement("div");
+    p.classList.add("petal");
+    p.style.left = Math.random() * 100 + "vw";
+    p.style.animationDelay = Math.random() * 7 + "s";
+    document.body.appendChild(p);
+}
+</script>
+
+<!-- 💞 MAIN INTERACTION -->
 <div id="container">
     <h1>Hi my love ❤️</h1>
     <p>I made something special for you…</p>
-    <button onclick="startQuiz()">Start</button>
+    <button onclick="startQuiz()">Begin</button>
 </div>
 
 <script>
 function startQuiz() {
     container.innerHTML = `
-        <h2>Cute Quiz 💕</h2>
+        <h2>Quiz Time 💕</h2>
         <p>1. When did we start dating?</p>
         <input id="q1" placeholder="Type your answer">
         <button onclick="quiz2()">Next</button>
@@ -100,90 +169,69 @@ function startQuiz() {
 
 function quiz2() {
     container.innerHTML = `
-        <h2>Cute Quiz 💕</h2>
+        <h2>Quiz Time 💕</h2>
         <p>2. What's my favorite thing about you? 😘</p>
         <input id="q2" placeholder="Your adorable guess">
-        <button onclick="startGame()">Next</button>
+        <button onclick="miniGame()">Next</button>
     `;
 }
 
-function startGame() {
+function miniGame() {
     container.innerHTML = `
         <h2>Mini Game 🎮</h2>
         <p>Catch the heart 3 times! 💗</p>
-        <div id="gameArea" style="height:300px; position:relative; border:2px dashed pink; border-radius:10px;"></div>
+        <div id="gameArea" style="height:300px;border:2px dashed pink;border-radius:10px;position:relative;"></div>
     `;
 
-    let gameArea = document.getElementById("gameArea");
-    let heartsCaught = 0;
+    let area = document.getElementById("gameArea");
+    let caught = 0;
 
-    function spawnHeart() {
-        let heart = document.createElement("div");
-        heart.textContent = "❤️";
-        heart.style.position = "absolute";
-        heart.style.left = Math.random()*250 + "px";
-        heart.style.top = Math.random()*240 + "px";
-        heart.style.fontSize = "40px";
-        heart.style.cursor = "pointer";
+    function spawn() {
+        let h = document.createElement("div");
+        h.textContent = "❤️";
+        h.style.position = "absolute";
+        h.style.left = Math.random() * 240 + "px";
+        h.style.top = Math.random() * 240 + "px";
+        h.style.fontSize = "40px";
+        h.style.cursor = "pointer";
 
-        heart.onclick = () => {
-            heart.remove();
-            heartsCaught++;
-            if (heartsCaught === 3) {
-                finalQuestion();
-            } else {
-                spawnHeart();
-            }
+        h.onclick = () => {
+            h.remove();
+            caught++;
+            if (caught === 3) finalQuestion();
+            else spawn();
         };
 
-        gameArea.appendChild(heart);
+        area.appendChild(h);
     }
-
-    spawnHeart();
+    spawn();
 }
 
 function finalQuestion() {
     container.innerHTML = `
-        <h1>Will you be my Valentine? ❤️</h1>
-        <button onclick="yesChosen()">YES!!!</button>
-        <button id="noBtn" onmouseover="moveNoButton()" onclick="moveNoButton()">No 😈</button>
+        <h1>Will you be my Valentine? 💖</h1>
+        <button onclick="yes()">YES!!!</button>
+        <button id="noBtn" onmouseover="escape()" onclick="escape()">No 😈</button>
     `;
-
-    positionNoBtn();
 }
 
-function positionNoBtn() {
-    const noBtn = document.getElementById("noBtn");
-    noBtn.style.left = "50%";
-    noBtn.style.top = "300px";
+function escape() {
+    const n = document.getElementById("noBtn");
+    n.style.left = Math.random() * (window.innerWidth - 100) + "px";
+    n.style.top = Math.random() * (window.innerHeight - 100) + "px";
 }
 
-function moveNoButton() {
-    const noBtn = document.getElementById("noBtn");
-    noBtn.style.left = Math.random() * (window.innerWidth - 100) + "px";
-    noBtn.style.top = Math.random() * (window.innerHeight - 100) + "px";
-}
-
-function yesChosen() {
+function yes() {
     container.innerHTML = `
-        <h1>YAYYYY!!! ❤️🥰</h1>
-        <p>You made me the happiest person ever!</p>
-        <h2>I love you so much 💕</h2>
+        <h1>You said YES!!! ❤️🥰</h1>
+        <p>You made me the happiest person in the universe.</p>
+        <p>I love you endlessly 💖</p>
+
+        <!-- Photos will appear here when added -->
+        <div id="photos"></div>
     `;
 
-    spawnHearts();
-}
-
-function spawnHearts() {
-    setInterval(() => {
-        let heart = document.createElement("div");
-        heart.className = "heart";
-        heart.textContent = "💖";
-        heart.style.left = Math.random() * window.innerWidth + "px";
-        document.body.appendChild(heart);
-
-        setTimeout(() => heart.remove(), 4000);
-    }, 300);
+    // Floating photo reveal (empty for now)
 }
 </script>
 
