--- a/index.html
+++ b/index.html
@@ -54,17 +54,12 @@ body {
 
 /* 🕊️ Main Romantic Container */
 #container {
-    margin: 70px auto;
-    max-width: 650px;
-    background: rgba(255,255,255,0.65);
-    padding: 40px;
-    border-radius: 25px;
-    backdrop-filter: blur(7px);
-    box-shadow: 0 8px 30px rgba(0,0,0,0.15);
-    animation: fadeIn 1.5s ease;
-    border: 2px solid rgba(255,183,197,0.6);
-}
+   background: rgba(255, 255, 255, 0.45);
+backdrop-filter: blur(12px);
+border: 1px solid rgba(255, 255, 255, 0.4);
+box-shadow: 0 10px 40px rgba(255, 150, 180, 0.3);
 
+    
 @keyframes fadeIn {
     from { opacity: 0; transform: translateY(15px); }
     to { opacity: 1; transform: translateY(0); }
