--- a/index.html
+++ b/index.html
@@ -54,10 +54,11 @@ body {
 
 /* 🕊️ Main Romantic Container */
 #container {
-   background: rgba(255, 255, 255, 0.45);
-backdrop-filter: blur(12px);
-border: 1px solid rgba(255, 255, 255, 0.4);
-box-shadow: 0 10px 40px rgba(255, 150, 180, 0.3);
+   background: linear-gradient(145deg, #fff4f7, #ffeef2);
+border: 2px solid #ffafc7;
+box-shadow: 0 10px 40px rgba(255, 120, 150, 0.4);
+border-radius: 30px;
+}
 
     
 @keyframes fadeIn {
