--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@ body {
 
 /* 🕊️ Main Romantic Container */
 #container {
-   background: linear-gradient(145deg, #fff4f7, #ffeef2);
-border: 2px solid #ffafc7;
-box-shadow: 0 10px 40px rgba(255, 120, 150, 0.4);
-border-radius: 30px;
+  background: rgba(255,240,245,0.85);
+border-radius: 45px;
+box-shadow: inset 0 0 20px rgba(255,200,220,0.6),
+            0 10px 30px rgba(255,150,180,0.4);
 }
 
     
