--- a/container-preview.html
+++ b/container-preview.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -155,4 +154,25 @@ for (let i = 0; i < 20; i++) {
 <h1>Style B — Pastel Bubble</h1>
 <div class="preview-box containerB">
     <p>Cute round pastel bubble look</p>
-</di
+</div>
+
+<!-- 🌸 STYLE C -->
+<h1>Style C — Romantic Pink & Gold</h1>
+<div class="preview-box containerC">
+    <p>Elegant Valentine with gold-pink vibes</p>
+</div>
+
+<!-- 🌸 STYLE D -->
+<h1>Style D — Floating Glow Card</h1>
+<div class="preview-box containerD">
+    <p>Clean glowing card with soft edges</p>
+</div>
+
+<!-- 🌸 STYLE E -->
+<h1>Style E — Kawaii Inner Glow</h1>
+<div class="preview-box containerE">
+    <p>Warmest pastel bubble with inner glow</p>
+</div>
+
+</body>
+</html>
