--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <meta charset="UTF-8">
 <title>My Valentine ❤️</title>
 
-<!-- Romantic Cursive Fonts -->
-<link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Playfair+Display:ital,wght@1,400;1,700&display=swap" rel="stylesheet">
+<!-- Romantic Fonts -->
+<link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Playfair+Display:ital,wght@1,700&family=Cormorant+Garamond:ital,wght@1,500&display=swap" rel="stylesheet">
 
 <!-- Autoplay Music -->
 <audio id="bgMusic" src="New_West_-_Those_Eyes_CeeNaija.com_.mp3" autoplay loop></audio>
@@ -17,7 +17,7 @@ body {
     padding: 0;
     overflow-x: hidden;
     background: linear-gradient(135deg, #ffe3ef, #ffdff8, #f4e3ff);
-    font-family: "Playfair Display", serif;
+    font-family: "Cormorant Garamond", serif;
     text-align: center;
     color: #7a4a4a;
 }
@@ -37,7 +37,7 @@ body {
     to { transform: translateY(-350px); opacity: 0; }
 }
 
-/* 💐 Petal Falling Animation */
+/* 💐 Falling Petals */
 .petal {
     position: fixed;
     top: -20px;
@@ -49,36 +49,43 @@ body {
 }
 @keyframes fall {
     0% { transform: translateY(0) rotate(0deg); }
-    100% { transform: translateY(120vh) rotate(360deg); }
+    100% { transform: translateY(110vh) rotate(360deg); }
 }
 
-/* 🕊️ Main Romantic Container */
+/* 🌟 Kawaii Inner Glow Container (Style E) */
 #container {
-  background: rgba(255,240,245,0.85);
-border-radius: 45px;
-box-shadow: inset 0 0 20px rgba(255,200,220,0.6),
-            0 10px 30px rgba(255,150,180,0.4);
+    margin: 70px auto;
+    max-width: 650px;
+    background: rgba(255,240,245,0.85);
+    padding: 50px;
+    border-radius: 45px;
+    box-shadow:
+        inset 0 0 20px rgba(255,200,220,0.6),
+        0 10px 30px rgba(255,150,180,0.4);
+    animation: fadeIn 1.5s ease;
 }
 
-    
+/* Smooth fade animation */
 @keyframes fadeIn {
     from { opacity: 0; transform: translateY(15px); }
     to { opacity: 1; transform: translateY(0); }
 }
 
-/* ✒️ Romantic Cursive Titles */
-h1, h2 {
-    font-family: "Great Vibes", cursive;
-    font-size: 52px;
-    color: #d46b86;
-    margin-bottom: 10px;
-}
-
-/* 📝 Cute Paragraph Text */
-p {
+/* Cute Inputs */
+input {
+    padding: 12px;
+    width: 80%;
     font-size: 20px;
-    font-style: italic;
-    color: #8c5b5b;
+    border: 2px solid #ffb6c1;
+    border-radius: 12px;
+    background: #fff7fa;
+    color: #7a4a4a;
+    margin-top: 10px;
+    font-family: "Cormorant Garamond", serif;
+}
+input:focus {
+    outline: none;
+    box-shadow: 0 0 12px rgba(255,160,176,0.7);
 }
 
 /* 💗 Heart-Shaped Buttons */
@@ -88,7 +95,7 @@ button {
     border: none;
     padding: 14px 32px;
     font-size: 24px;
-    border-radius: 40px 40px 40px 40px;
+    border-radius: 40px;
     cursor: pointer;
     font-family: "Great Vibes", cursive;
     transition: 0.3s;
@@ -100,13 +107,14 @@ button:hover {
     box-shadow: 0 8px 20px rgba(255,120,150,0.5);
 }
 
-/* 😈 The NO button (runs away) */
+/* 😈 NO button */
 #noBtn {
     position: absolute;
     background: #b9838d;
+    border-radius: 40px;
 }
 
-/* 🌟 Floating Photo Reveal (disabled until user adds photos) */
+/* Floating photo reveal placeholder */
 .float-photo {
     width: 180px;
     border-radius: 20px;
@@ -123,7 +131,7 @@ button:hover {
 
 <body>
 
-<!-- ✨ SPARKLE GENERATOR -->
+<!-- ✨ SPARKLES GENERATION -->
 <script>
 for (let i = 0; i < 40; i++) {
     let s = document.createElement("div");
@@ -135,7 +143,7 @@ for (let i = 0; i < 40; i++) {
 }
 </script>
 
-<!-- 💐 PETAL GENERATOR -->
+<!-- 💐 PETALS -->
 <script>
 for (let i = 0; i < 20; i++) {
     let p = document.createElement("div");
@@ -146,17 +154,29 @@ for (let i = 0; i < 20; i++) {
 }
 </script>
 
-<!-- 💞 MAIN INTERACTION -->
+<!-- 🌸 INTRO SECTION -->
 <div id="container">
-    <h1>Hi my love ❤️</h1>
-    <p>I made something special for you…</p>
+    <h1 style="font-size:52px; font-family:'Great Vibes', cursive;">Hii kutti ma 💖</h1>
+
+    <p style="font-size:24px; line-height:1.5;">
+        I hope this makes your day.
+        <br><br>
+        We've been together for nearly 2 years now,<br>
+        to be exact it's <b>1 YEAR 8 MONTHS AND 6 DAYS</b> today.
+        <br><br>
+        Guess who made something cute for you? 😏<br>
+        Click below and come see…
+    </p>
+
     <button onclick="startQuiz()">Begin</button>
 </div>
 
 <script>
+/* QUIZ + GAME + VALENTINE FLOW */
+
 function startQuiz() {
     container.innerHTML = `
-        <h2>Quiz Time 💕</h2>
+        <h2 style="font-family:'Great Vibes'; font-size:48px;">Quiz Time 💕</h2>
         <p>1. When did we start dating?</p>
         <input id="q1" placeholder="Type your answer">
         <button onclick="quiz2()">Next</button>
@@ -165,7 +185,7 @@ function startQuiz() {
 
 function quiz2() {
     container.innerHTML = `
-        <h2>Quiz Time 💕</h2>
+        <h2 style="font-family:'Great Vibes'; font-size:48px;">Quiz Time 💕</h2>
         <p>2. What's my favorite thing about you? 😘</p>
         <input id="q2" placeholder="Your adorable guess">
         <button onclick="miniGame()">Next</button>
@@ -174,7 +194,7 @@ function quiz2() {
 
 function miniGame() {
     container.innerHTML = `
-        <h2>Mini Game 🎮</h2>
+        <h2 style="font-family:'Great Vibes'; font-size:48px;">Mini Game 🎮</h2>
         <p>Catch the heart 3 times! 💗</p>
         <div id="gameArea" style="height:300px;border:2px dashed pink;border-radius:10px;position:relative;"></div>
     `;
@@ -205,7 +225,7 @@ function miniGame() {
 
 function finalQuestion() {
     container.innerHTML = `
-        <h1>Will you be my Valentine? 💖</h1>
+        <h1 style="font-family:'Great Vibes'; font-size:52px;">Will you be my Valentine? 💖</h1>
         <button onclick="yes()">YES!!!</button>
         <button id="noBtn" onmouseover="escape()" onclick="escape()">No 😈</button>
     `;
@@ -213,21 +233,19 @@ function finalQuestion() {
 
 function escape() {
     const n = document.getElementById("noBtn");
-    n.style.left = Math.random() * (window.innerWidth - 100) + "px";
-    n.style.top = Math.random() * (window.innerHeight - 100) + "px";
+    n.style.left = Math.random() * (window.innerWidth - 120) + "px";
+    n.style.top = Math.random() * (window.innerHeight - 120) + "px";
 }
 
 function yes() {
     container.innerHTML = `
-        <h1>You said YES!!! ❤️🥰</h1>
-        <p>You made me the happiest person in the universe.</p>
-        <p>I love you endlessly 💖</p>
-
-        <!-- Photos will appear here when added -->
+        <h1 style="font-family:'Great Vibes'; font-size:52px;">You said YES!!! ❤️🥰</h1>
+        <p style="font-size:24px;">
+            You made me the happiest person in the universe.<br>
+            I love you endlessly 💖
+        </p>
         <div id="photos"></div>
     `;
-
-    // Floating photo reveal (empty for now)
 }
 </script>
 
