--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ body {
 }
 
 /* ✨ Floating Sparkles */
-.sparkle {
+.sparkle {z-index: 2;
     position: absolute;
     width: 6px;
     height: 6px;
@@ -38,7 +38,7 @@ body {
 }
 
 /* 💐 Falling Petals */
-.petal {
+.petal {z-index: 1;
     position: fixed;
     top: -20px;
     width: 18px;
@@ -46,6 +46,7 @@ body {
     background-color: rgba(255,182,193,0.8);
     border-radius: 50% 70% 50% 70%;
     animation: fall 7s linear infinite;
+    z-index: 1;  /* adds this line */
 }
 @keyframes fall {
     0% { transform: translateY(0) rotate(0deg); }
@@ -53,7 +54,10 @@ body {
 }
 
 /* 🌟 Kawaii Inner Glow Container (Style E) */
-#container {
+    
+
+#container {position: relative;
+z-index: 5;
     margin: 70px auto;
     max-width: 650px;
     background: rgba(255,240,245,0.85);
@@ -172,82 +176,4 @@ for (let i = 0; i < 20; i++) {
 </div>
 
 <script>
-/* QUIZ + GAME + VALENTINE FLOW */
 
-function startQuiz() {
-    container.innerHTML = `
-        <h2 style="font-family:'Great Vibes'; font-size:48px;">Quiz Time 💕</h2>
-        <p>1. When did we start dating?</p>
-        <input id="q1" placeholder="Type your answer">
-        <button onclick="quiz2()">Next</button>
-    `;
-}
-
-function quiz2() {
-    container.innerHTML = `
-        <h2 style="font-family:'Great Vibes'; font-size:48px;">Quiz Time 💕</h2>
-        <p>2. What's my favorite thing about you? 😘</p>
-        <input id="q2" placeholder="Your adorable guess">
-        <button onclick="miniGame()">Next</button>
-    `;
-}
-
-function miniGame() {
-    container.innerHTML = `
-        <h2 style="font-family:'Great Vibes'; font-size:48px;">Mini Game 🎮</h2>
-        <p>Catch the heart 3 times! 💗</p>
-        <div id="gameArea" style="height:300px;border:2px dashed pink;border-radius:10px;position:relative;"></div>
-    `;
-
-    let area = document.getElementById("gameArea");
-    let caught = 0;
-
-    function spawn() {
-        let h = document.createElement("div");
-        h.textContent = "❤️";
-        h.style.position = "absolute";
-        h.style.left = Math.random() * 240 + "px";
-        h.style.top = Math.random() * 240 + "px";
-        h.style.fontSize = "40px";
-        h.style.cursor = "pointer";
-
-        h.onclick = () => {
-            h.remove();
-            caught++;
-            if (caught === 3) finalQuestion();
-            else spawn();
-        };
-
-        area.appendChild(h);
-    }
-    spawn();
-}
-
-function finalQuestion() {
-    container.innerHTML = `
-        <h1 style="font-family:'Great Vibes'; font-size:52px;">Will you be my Valentine? 💖</h1>
-        <button onclick="yes()">YES!!!</button>
-        <button id="noBtn" onmouseover="escape()" onclick="escape()">No 😈</button>
-    `;
-}
-
-function escape() {
-    const n = document.getElementById("noBtn");
-    n.style.left = Math.random() * (window.innerWidth - 120) + "px";
-    n.style.top = Math.random() * (window.innerHeight - 120) + "px";
-}
-
-function yes() {
-    container.innerHTML = `
-        <h1 style="font-family:'Great Vibes'; font-size:52px;">You said YES!!! ❤️🥰</h1>
-        <p style="font-size:24px;">
-            You made me the happiest person in the universe.<br>
-            I love you endlessly 💖
-        </p>
-        <div id="photos"></div>
-    `;
-}
-</script>
-
-</body>
-</html>
