--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <title>My Valentine ❤️</title>
 
 <!-- Romantic Fonts -->
-<link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Playfair+Display:ital,wght@1,700&family=Cormorant+Garamond:ital,wght@1,500&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Cormorant+Garamond:ital,wght@1,500&display=swap" rel="stylesheet">
 
 <!-- Autoplay Music -->
 <audio id="bgMusic" src="New_West_-_Those_Eyes_CeeNaija.com_.mp3" autoplay loop></audio>
@@ -23,7 +23,7 @@ body {
 }
 
 /* ✨ Floating Sparkles */
-.sparkle {z-index: 2;
+.sparkle {
     position: absolute;
     width: 6px;
     height: 6px;
@@ -31,6 +31,7 @@ body {
     border-radius: 50%;
     box-shadow: 0 0 8px white;
     animation: sparkleFloat 6s linear infinite;
+    z-index: 2;
 }
 @keyframes sparkleFloat {
     from { transform: translateY(0); opacity: 1; }
@@ -38,7 +39,7 @@ body {
 }
 
 /* 💐 Falling Petals */
-.petal {z-index: 1;
+.petal {
     position: fixed;
     top: -20px;
     width: 18px;
@@ -46,7 +47,7 @@ body {
     background-color: rgba(255,182,193,0.8);
     border-radius: 50% 70% 50% 70%;
     animation: fall 7s linear infinite;
-    z-index: 1;  /* adds this line */
+    z-index: 1;
 }
 @keyframes fall {
     0% { transform: translateY(0) rotate(0deg); }
@@ -54,10 +55,7 @@ body {
 }
 
 /* 🌟 Kawaii Inner Glow Container (Style E) */
-    
-
-#container {position: relative;
-z-index: 5;
+#container {
     margin: 70px auto;
     max-width: 650px;
     background: rgba(255,240,245,0.85);
@@ -67,6 +65,8 @@ z-index: 5;
         inset 0 0 20px rgba(255,200,220,0.6),
         0 10px 30px rgba(255,150,180,0.4);
     animation: fadeIn 1.5s ease;
+    position: relative;
+    z-index: 5;
 }
 
 /* Smooth fade animation */
@@ -92,7 +92,7 @@ input:focus {
     box-shadow: 0 0 12px rgba(255,160,176,0.7);
 }
 
-/* 💗 Heart-Shaped Buttons */
+/* 💗 Buttons */
 button {
     background: #ff9bb3;
     color: white;
@@ -108,34 +108,13 @@ button {
 button:hover {
     transform: scale(1.12);
     background: #ff7a9c;
-    box-shadow: 0 8px 20px rgba(255,120,150,0.5);
-}
-
-/* 😈 NO button */
-#noBtn {
-    position: absolute;
-    background: #b9838d;
-    border-radius: 40px;
-}
-
-/* Floating photo reveal placeholder */
-.float-photo {
-    width: 180px;
-    border-radius: 20px;
-    margin: 20px;
-    animation: floatUp 4s ease forwards;
-    opacity: 0;
-}
-@keyframes floatUp {
-    from { transform: translateY(40px); opacity: 0; }
-    to { transform: translateY(-20px); opacity: 1; }
 }
 </style>
 </head>
 
 <body>
 
-<!-- ✨ SPARKLES GENERATION -->
+<!-- ✨ Sparkles -->
 <script>
 for (let i = 0; i < 40; i++) {
     let s = document.createElement("div");
@@ -147,7 +126,7 @@ for (let i = 0; i < 40; i++) {
 }
 </script>
 
-<!-- 💐 PETALS -->
+<!-- 💐 Petals -->
 <script>
 for (let i = 0; i < 20; i++) {
     let p = document.createElement("div");
@@ -176,9 +155,7 @@ for (let i = 0; i < 20; i++) {
 </div>
 
 <script>
-
-
-/* QUIZ WITH SCOREBOARD + 2 PAGES */
+/* ⭐ QUIZ WITH SCOREBOARD AND 2 PAGES ⭐ */
 
 function startQuiz() {
     container.innerHTML = `
@@ -236,7 +213,7 @@ function quizPage2() {
     `;
 }
 
-/* SCOREBOARD SCREEN */
+/* ⭐ SCOREBOARD SCREEN ⭐ */
 function showScore() {
     container.innerHTML = `
         <h1 style="font-family:'Great Vibes'; font-size:55px;">Your Score 💖</h1>
@@ -247,8 +224,10 @@ function showScore() {
             No matter what, I still love you kutti ma ❤️
         </p>
 
-        <button onclick="miniGame()">Continue ➜</button>
+        <button onclick="location.reload()">Restart 💕</button>
     `;
 }
+</script>
 
-
+</body>
+</html>
