--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@ body {
     overflow-x: hidden;
     background: linear-gradient(135deg, #ffe3ef, #ffdff8, #f4e3ff);
     font-family: "Cormorant Garamond", serif;
-    text-align: center;
     color: #7a4a4a;
 }
 
@@ -54,17 +53,40 @@ body {
     100% { transform: translateY(110vh) rotate(360deg); }
 }
 
-/* 🌟 Kawaii Inner Glow Container */
+/* 💗 Falling Hearts on Final Page */
+.heart-fall {
+    position: fixed;
+    top: -20px;
+    font-size: 24px;
+    animation: heartFall 6s linear infinite;
+    z-index: 200;
+}
+@keyframes heartFall {
+    0% { transform: translateY(0) rotate(0deg); opacity:1; }
+    100% { transform: translateY(110vh) rotate(360deg); opacity:0; }
+}
+
+/* 💥 Heart Explosion */
+.heart-explosion {
+    position: absolute;
+    font-size: 22px;
+    animation: explode 0.9s ease-out forwards;
+    pointer-events: none;
+}
+@keyframes explode {
+    0% { transform: translate(0,0) scale(1); opacity:1; }
+    100% { transform: translate(var(--dx), var(--dy)) scale(0.2); opacity:0; }
+}
+
+/* 🌟 Kawaii Glow Container */
 #container {
     margin: 70px auto;
     max-width: 650px;
-    background: rgba(255,240,245,0.85);
+    background: rgba(255,240,245,0.88);
     padding: 50px;
     border-radius: 45px;
-    box-shadow:
-        inset 0 0 20px rgba(255,200,220,0.6),
-        0 10px 30px rgba(255,150,180,0.4);
-    animation: fadeIn 1.5s ease;
+    box-shadow: inset 0 0 20px rgba(255,200,220,0.6), 0 10px 30px rgba(255,150,180,0.4);
+    animation: fadeIn 1.2s ease;
     position: relative;
     z-index: 5;
     text-align: left;
@@ -84,13 +106,8 @@ input {
     border: 2px solid #ffb6c1;
     border-radius: 12px;
     background: #fff7fa;
-    color: #7a4a4a;
     margin-top: 10px;
     font-family: "Cormorant Garamond", serif;
-}
-input:focus {
-    outline: none;
-    box-shadow: 0 0 12px rgba(255,160,176,0.7);
 }
 
 /* Buttons */
@@ -99,7 +116,7 @@ button {
     color: white;
     border: none;
     padding: 14px 32px;
-    font-size: 24px;
+    font-size: 25px;
     border-radius: 40px;
     cursor: pointer;
     font-family: "Great Vibes", cursive;
@@ -113,31 +130,24 @@ button:hover {
     background: #ff7a9c;
 }
 
-/* QUESTION TEXT */
+/* Question text */
 .q {
     font-size: 22px;
     margin-top: 25px;
-    margin-bottom: 10px;
-    text-align: left;
 }
 
-/* OPTIONS LIST - LEFT ALIGNED */
+/* Options */
 .options {
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
     gap: 10px;
-    margin-bottom: 20px;
-    font-size: 20px;
 }
 
-/* EACH OPTION - FIX WRAPPING */
 .options label {
     display: flex;
     align-items: center;
-    justify-content: flex-start;
     gap: 10px;
-    white-space: nowrap;        /* ❗ Prevents text from breaking into new line */
+    white-space: nowrap;
 }
 </style>
 </head>
@@ -147,7 +157,7 @@ button:hover {
 <!-- ✨ Sparkles -->
 <script>
 for (let i = 0; i < 40; i++) {
-    let s = document.createElement("div");
+    const s = document.createElement("div");
     s.classList.add("sparkle");
     s.style.left = Math.random() * window.innerWidth + "px";
     s.style.top = Math.random() * window.innerHeight + "px";
@@ -159,7 +169,7 @@ for (let i = 0; i < 40; i++) {
 <!-- 💐 Petals -->
 <script>
 for (let i = 0; i < 20; i++) {
-    let p = document.createElement("div");
+    const p = document.createElement("div");
     p.classList.add("petal");
     p.style.left = Math.random() * 100 + "vw";
     p.style.animationDelay = Math.random() * 7 + "s";
@@ -167,11 +177,11 @@ for (let i = 0; i < 20; i++) {
 }
 </script>
 
-<!-- 🌸 INTRO SECTION -->
+<!-- INTRO -->
 <div id="container">
-    <h1 style="font-size:52px; font-family:'Great Vibes', cursive; text-align:center;">Hii kutti ma 💖</h1>
+    <h1 style="font-size:52px; font-family:'Great Vibes'; text-align:center;">Hii kutti ma 💖</h1>
 
-    <p style="font-size:24px; line-height:1.5; text-align:center;">
+    <p style="font-size:24px; text-align:center;">
         I hope this makes your day.<br><br>
         We've been together for nearly 2 years now,<br>
         to be exact it's <b>1 YEAR 8 MONTHS AND 6 DAYS</b> today.<br><br>
@@ -183,90 +193,174 @@ for (let i = 0; i < 20; i++) {
 </div>
 
 <script>
-/* ⭐ LEFT-ALIGNED, NON-WRAPPING QUIZ ⭐ */
-
-/* PAGE 1 */
+/* QUIZ PAGE 1 */
 function startQuiz() {
     container.innerHTML = `
         <h2 style="font-family:'Great Vibes'; font-size:48px; text-align:center;">Quiz Time 💕</h2>
-        <p style="font-size:22px; margin-bottom:35px; text-align:center;">Let's see if you score 10/10. I know you'll get everything correct hehe!!</p>
 
         <p class="q">1. What was the first text I sent you and which movie reference is it from?</p>
-        <input id="q1" placeholder="Type your answer">
+        <input id="q1">
 
         <p class="q">2. Which is a mandatory meal we ate every time I came?</p>
         <div class="options">
-            <label><input type="radio" name="q2" value="Indomie"> Indomie</label>
-            <label><input type="radio" name="q2" value="Loaded fries"> Loaded fries</label>
-            <label><input type="radio" name="q2" value="Maccas"> Maccas</label>
-            <label><input type="radio" name="q2" value="All the above"> All the above ❤️</label>
+            <label><input type="radio" name="q2"> Indomie</label>
+            <label><input type="radio" name="q2"> Loaded fries</label>
+            <label><input type="radio" name="q2"> Maccas</label>
+            <label><input type="radio" name="q2"> All the above ❤️</label>
         </div>
 
         <p class="q">3. What was our first movie date?</p>
         <div class="options">
-            <label><input type="radio" name="q3" value="3"> 3</label>
-            <label><input type="radio" name="q3" value="We Live In Time"> We Live In Time</label>
+            <label><input type="radio" name="q3"> 3</label>
+            <label><input type="radio" name="q3"> We Live In Time</label>
         </div>
 
         <p class="q">4. What was one of our favourite moments?</p>
         <div class="options">
-            <label><input type="radio" name="q4" value="Sunsets"> Sunsets at St. Kilda</label>
-            <label><input type="radio" name="q4" value="Butterfly"> Butterfly Museum</label>
-            <label><input type="radio" name="q4" value="Strolls"> Mid-Night strolls</label>
-            <label><input type="radio" name="q4" value="All"> All the above ❤️</label>
+            <label><input type="radio" name="q4"> Sunsets at St. Kilda</label>
+            <label><input type="radio" name="q4"> Butterfly Museum</label>
+            <label><input type="radio" name="q4"> Mid-Night strolls</label>
+            <label><input type="radio" name="q4"> All the above ❤️</label>
         </div>
 
         <p class="q">5. Name one food we'd never agree to the way it's called in our language.</p>
-        <input id="q5" placeholder="Type your answer">
+        <input id="q5">
 
         <button onclick="quizPage2()">Next ➜</button>
     `;
 }
 
-/* PAGE 2 */
+/* QUIZ PAGE 2 */
 function quizPage2() {
     container.innerHTML = `
         <p class="q">6. What are the nicknames I use to call you and which one do I use the most?</p>
-        <input id="q6" placeholder="Type your answer">
+        <input id="q6">
 
         <p class="q">7. Micheal can cook better than Sharon</p>
         <div class="options">
-            <label><input type="radio" name="q7" value="Agree"> Agree 😏</label>
-            <label><input type="radio" name="q7" value="Disagree"> Disagree</label>
+            <label><input type="radio" name="q7"> Agree 😏</label>
+            <label><input type="radio" name="q7"> Disagree</label>
         </div>
 
         <p class="q">8. When was our first sunrise together which you posted a story?</p>
-        <input id="q8" placeholder="Type your answer">
+        <input id="q8">
 
         <p class="q">9. On which month did we buy rings for each other?</p>
-        <input id="q9" placeholder="Type your answer">
+        <input id="q9">
 
         <p class="q">10. Do you love me?</p>
         <div class="options">
-            <label><input type="radio" name="q10" value="Yes"> Yes</label>
-            <label><input type="radio" name="q10" value="Yes"> Yes</label>
-            <label><input type="radio" name="q10" value="All the above"> All the above ❤️</label>
+            <label><input type="radio" name="q10"> Yes</label>
+            <label><input type="radio" name="q10"> Yes</label>
+            <label><input type="radio" name="q10"> All the above ❤️</label>
         </div>
 
         <button onclick="showScore()">Results ➜</button>
     `;
 }
 
-/* RESULTS PAGE */
+/* SCORE PAGE */
 function showScore() {
     container.innerHTML = `
         <h1 style="font-family:'Great Vibes'; font-size:55px; text-align:center;">Your Score 💖</h1>
 
-        <p style="font-size:26px; line-height:1.6; text-align:center;">
+        <p style="font-size:26px; text-align:center;">
             You got <b>10 out of 10</b>, which means you tried.<br>
             No matter what, I still love you kutti ma ❤️
         </p>
 
-        <button onclick="location.reload()">Restart 💕</button>
+        <button onclick="valentineQuestion()">Continue 💕</button>
     `;
+}
+
+/* VALENTINE QUESTION PAGE */
+function valentineQuestion() {
+    container.innerHTML = `
+        <h1 style="font-family:'Great Vibes'; font-size:52px; text-align:center;">
+            Well well look who made it 💕
+        </h1>
+
+        <p style="font-size:24px; text-align:center;">
+            Me's so proud of you bbyg 😘<br><br>
+            I still have one more question to ask you…<br><br>
+            <b>Will you be my Valentine?</b> 💖
+        </p>
+
+        <div style="text-align:center; margin-top:30px;">
+            <button onclick="triggerExplosion(event); valentineYes();" 
+                style="font-size:28px;">Yes 💗</button>
+
+            <button id="noBtn" 
+                onmouseover="escapeNo()" 
+                onclick="escapeNo()" 
+                style="font-size:22px;">No</button>
+        </div>
+    `;
+}
+
+/* NO button runs away */
+function escapeNo() {
+    const b = document.getElementById("noBtn");
+    b.style.position = "absolute";
+    b.style.left = Math.random() * (window.innerWidth - 150) + "px";
+    b.style.top = Math.random() * (window.innerHeight - 150) + "px";
+}
+
+/* 💥 HEART EXPLOSION */
+function triggerExplosion(event) {
+    const x = event.clientX;
+    const y = event.clientY;
+
+    for (let i = 0; i < 14; i++) {
+        const heart = document.createElement("div");
+        heart.classList.add("heart-explosion");
+        heart.innerHTML = "❤️";
+
+        const dx = (Math.random() - 0.5) * 300;
+        const dy = (Math.random() - 0.5) * 300;
+
+        heart.style.left = x + "px";
+        heart.style.top = y + "px";
+        heart.style.setProperty("--dx", dx + "px");
+        heart.style.setProperty("--dy", dy + "px");
+
+        document.body.appendChild(heart);
+
+        setTimeout(() => heart.remove(), 900);
+    }
+}
+
+/* FINAL YES PAGE */
+function valentineYes() {
+    /* Start falling hearts */
+    startHeartRain();
+
+    container.innerHTML = `
+        <h1 style="font-family:'Great Vibes'; font-size:55px; text-align:center;">
+            She said YES 🥹💖
+        </h1>
+
+        <img src="https://media.tenor.com/PHdVt8uWbH8AAAAC/cute-crying.gif"
+             style="width:230px; border-radius:20px; display:block; margin:20px auto;">
+
+        <p style="font-size:26px; text-align:center; line-height:1.5;">
+            I love you always my dear Pazham pori 💛
+        </p>
+    `;
+}
+
+/* 💗 Falling Hearts Function */
+function startHeartRain() {
+    for (let i = 0; i < 25; i++) {
+        const h = document.createElement("div");
+        h.classList.add("heart-fall");
+        h.innerHTML = "💖";
+        h.style.left = Math.random() * 100 + "vw";
+        h.style.animationDelay = Math.random() * 5 + "s";
+        document.body.appendChild(h);
+    }
 }
 </script>
 
 </body>
 </html>
-
